--- a/cpp-api/classinviwo_1_1ProcessorNetworkEvaluationObserver.html
+++ b/cpp-api/classinviwo_1_1ProcessorNetworkEvaluationObserver.html
@@ -119,10 +119,11 @@ $(function(){initNavTree('classinviwo_1_1ProcessorNetworkEvaluationObserver.html
   <img src="classinviwo_1_1ProcessorNetworkEvaluationObserver.png" usemap="#inviwo::ProcessorNetworkEvaluationObserver_map" alt=""/>
   <map id="inviwo::ProcessorNetworkEvaluationObserver_map" name="inviwo::ProcessorNetworkEvaluationObserver_map">
 <area href="classinviwo_1_1Observer.html" alt="inviwo::Observer" shape="rect" coords="522,0,860,24"/>
-<area href="classinviwo_1_1FileCache.html" alt="inviwo::FileCache&lt; DataType, InportType, OutportType &gt;" shape="rect" coords="0,112,338,136"/>
+<area href="classinviwo_1_1CacheBase.html" alt="inviwo::CacheBase" shape="rect" coords="0,112,338,136"/>
 <area href="classinviwo_1_1GLFWModule.html" alt="inviwo::GLFWModule" shape="rect" coords="348,112,686,136"/>
 <area href="structinviwo_1_1NetworkDebugObserver.html" title="Observes the network and logs." alt="inviwo::NetworkDebugObserver" shape="rect" coords="696,112,1034,136"/>
 <area href="classinviwo_1_1OpenGLQtModule.html" alt="inviwo::OpenGLQtModule" shape="rect" coords="1044,112,1382,136"/>
+<area href="classinviwo_1_1FileCache.html" alt="inviwo::FileCache&lt; DataType, InportType, OutportType &gt;" shape="rect" coords="0,168,338,192"/>
   </map>
 </div></div>
 <table class="memberdecls">
