--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -375,6 +375,9 @@
 <a href="classinviwo_1_1CSVWriter-members.html"/>
 <a href="classinviwo_1_1CSVWriter.html"/>
 <a href="classinviwo_1_1CSVWriter.html#af433414bd5c722586fa37bc7385ecb50"/>
+<a href="classinviwo_1_1CacheBase-members.html"/>
+<a href="classinviwo_1_1CacheBase.html"/>
+<a href="classinviwo_1_1CacheBase.html#a00045f48b3f5ecd54bee777f50e0410a"/>
 <a href="classinviwo_1_1CalcNormalsProcessor-members.html"/>
 <a href="classinviwo_1_1CalcNormalsProcessor.html"/>
 <a href="classinviwo_1_1CalcNormalsProcessor.html#ae0013aab986ed2e2f9e78049371701b5"/>
@@ -1071,7 +1074,6 @@
 <a href="classinviwo_1_1FileBase.html#a753d824cef14001447bbbb918235b985"/>
 <a href="classinviwo_1_1FileCache-members.html"/>
 <a href="classinviwo_1_1FileCache.html"/>
-<a href="classinviwo_1_1FileCache.html#a0c8cd62ef186a700c771dc3f29fe06f0"/>
 <a href="classinviwo_1_1FileCache.html#a96e8bf27e96aa8918a0b0c49dff5418e"/>
 <a href="classinviwo_1_1FileDialog-members.html"/>
 <a href="classinviwo_1_1FileDialog.html"/>
@@ -2895,6 +2897,7 @@
 <a href="classinviwo_1_1ProcessorNetwork.html#ac8dba8aa2119e9d26551ccd800e44f89"/>
 <a href="classinviwo_1_1ProcessorNetwork.html#ad566dab86e9ead0a087b86fb4c75ebde"/>
 <a href="classinviwo_1_1ProcessorNetwork.html#ad862bca6df9fdcaaaab02a4eff64b8e9"/>
+<a href="classinviwo_1_1ProcessorNetwork.html#adc315b63486b3cbfb2f2302032b58ba6"/>
 <a href="classinviwo_1_1ProcessorNetwork.html#aea3f48a66478cf392c895d38c302db08"/>
 <a href="classinviwo_1_1ProcessorNetwork.html#af09e75e611fb743592e101f47275758b"/>
 <a href="classinviwo_1_1ProcessorNetwork.html#af7a2b0b17daf024bf0de4e1c8313ab8c"/>
@@ -6476,10 +6479,16 @@
 <a href="structinviwo_1_1PtrHash.html"/>
 <a href="structinviwo_1_1PythonProcessorFactoryObjectData-members.html"/>
 <a href="structinviwo_1_1PythonProcessorFactoryObjectData.html"/>
+<a href="structinviwo_1_1RAMCache-members.html"/>
+<a href="structinviwo_1_1RAMCache.html"/>
+<a href="structinviwo_1_1RAMCache_1_1Item-members.html"/>
+<a href="structinviwo_1_1RAMCache_1_1Item.html"/>
 <a href="structinviwo_1_1RasterizationRenderer_1_1IllustrationSettings-members.html"/>
 <a href="structinviwo_1_1RasterizationRenderer_1_1IllustrationSettings.html"/>
 <a href="structinviwo_1_1RaycastingState-members.html"/>
 <a href="structinviwo_1_1RaycastingState.html"/>
+<a href="structinviwo_1_1ReaderWriter-members.html"/>
+<a href="structinviwo_1_1ReaderWriter.html"/>
 <a href="structinviwo_1_1Resource-members.html"/>
 <a href="structinviwo_1_1Resource.html"/>
 <a href="structinviwo_1_1ResourceMeta-members.html"/>
