--- a/cpp-api/classinviwo_1_1PropertyOwnerObservable.html
+++ b/cpp-api/classinviwo_1_1PropertyOwnerObservable.html
@@ -197,43 +197,43 @@ $(function(){initNavTree('classinviwo_1_1PropertyOwnerObservable.html',''); init
 <area href="classinviwo_1_1BrushingAndLinkingProcessor.html" alt="inviwo::BrushingAndLinkingProcessor" shape="rect" coords="1176,1400,1558,1424"/>
 <area href="classinviwo_1_1BufferToMeshProcessor.html" title="Put buffers into mesh without copying data. Supported buffer types are specified in BufferType." alt="inviwo::BufferToMeshProcessor" shape="rect" coords="1176,1456,1558,1480"/>
 <area href="classinviwo_1_1CSVSource.html" alt="inviwo::CSVSource" shape="rect" coords="1176,1512,1558,1536"/>
-<area href="classinviwo_1_1CalcNormalsProcessor.html" alt="inviwo::CalcNormalsProcessor" shape="rect" coords="1176,1568,1558,1592"/>
-<area href="classinviwo_1_1CameraFrustum.html" alt="inviwo::CameraFrustum" shape="rect" coords="1176,1624,1558,1648"/>
-<area href="classinviwo_1_1CameraWidget.html" title="provides a mesh-based interaction widget for the camera rotation" alt="inviwo::CameraWidget" shape="rect" coords="1176,1680,1558,1704"/>
-<area href="classinviwo_1_1CanvasProcessor.html" alt="inviwo::CanvasProcessor" shape="rect" coords="1176,1736,1558,1760"/>
-<area href="classinviwo_1_1CanvasWithPropertiesProcessor.html" alt="inviwo::CanvasWithPropertiesProcessor" shape="rect" coords="1176,1792,1558,1816"/>
-<area href="classinviwo_1_1CompositeProcessor.html" title="A processor containing a network of processors, i.e. it will act as a sub network within a processor ..." alt="inviwo::CompositeProcessor" shape="rect" coords="1176,1848,1558,1872"/>
-<area href="classinviwo_1_1CompositeSinkBase.html" alt="inviwo::CompositeSinkBase" shape="rect" coords="1176,1904,1558,1928"/>
-<area href="classinviwo_1_1CompositeSourceBase.html" alt="inviwo::CompositeSourceBase" shape="rect" coords="1176,1960,1558,1984"/>
-<area href="classinviwo_1_1ConvexHull2DProcessor.html" title="Processor computing the convex hull of a given 2D input geometry." alt="inviwo::ConvexHull2DProcessor" shape="rect" coords="1176,2016,1558,2040"/>
-<area href="classinviwo_1_1CropWidget.html" alt="inviwo::CropWidget" shape="rect" coords="1176,2072,1558,2096"/>
-<area href="classinviwo_1_1CubeProxyGeometry.html" alt="inviwo::CubeProxyGeometry" shape="rect" coords="1176,2128,1558,2152"/>
-<area href="classinviwo_1_1CubeRenderer.html" title="Renders input geometry with 3D cube glyphs using OpenGL shaders." alt="inviwo::CubeRenderer" shape="rect" coords="1176,2184,1558,2208"/>
-<area href="classinviwo_1_1DataExport.html" alt="inviwo::DataExport&lt; DataType, PortType &gt;" shape="rect" coords="1176,2240,1558,2264"/>
-<area href="classinviwo_1_1DataFrameExporter.html" alt="inviwo::DataFrameExporter" shape="rect" coords="1176,2296,1558,2320"/>
-<area href="classinviwo_1_1DataFrameFilter.html" alt="inviwo::DataFrameFilter" shape="rect" coords="1176,2352,1558,2376"/>
-<area href="classinviwo_1_1DataFrameFloat32Converter.html" alt="inviwo::DataFrameFloat32Converter" shape="rect" coords="1176,2408,1558,2432"/>
-<area href="classinviwo_1_1DataFrameJoin.html" alt="inviwo::DataFrameJoin" shape="rect" coords="1176,2464,1558,2488"/>
-<area href="classinviwo_1_1DataFrameMetaData.html" alt="inviwo::DataFrameMetaData" shape="rect" coords="1176,2520,1558,2544"/>
-<area href="classinviwo_1_1DataFrameTable.html" alt="inviwo::DataFrameTable" shape="rect" coords="1176,2576,1558,2600"/>
-<area href="classinviwo_1_1DataFrameToBuffer.html" alt="inviwo::DataFrameToBuffer" shape="rect" coords="1176,2632,1558,2656"/>
-<area href="classinviwo_1_1DataFrameToMesh.html" alt="inviwo::DataFrameToMesh" shape="rect" coords="1176,2688,1558,2712"/>
-<area href="classinviwo_1_1DataFrameToVector.html" alt="inviwo::DataFrameToVector" shape="rect" coords="1176,2744,1558,2768"/>
-<area href="classinviwo_1_1DataSource.html" alt="inviwo::DataSource&lt; DataType, PortType, ReaderType &gt;" shape="rect" coords="1176,2800,1558,2824"/>
-<area href="classinviwo_1_1DepthDarkening.html" alt="inviwo::DepthDarkening" shape="rect" coords="1176,2856,1558,2880"/>
-<area href="classinviwo_1_1DepthOfField.html" alt="inviwo::DepthOfField" shape="rect" coords="1176,2912,1558,2936"/>
-<area href="classinviwo_1_1DiffuseLightSourceProcessor.html" alt="inviwo::DiffuseLightSourceProcessor" shape="rect" coords="1176,2968,1558,2992"/>
-<area href="classinviwo_1_1DirectionalLightSourceProcessor.html" alt="inviwo::DirectionalLightSourceProcessor" shape="rect" coords="1176,3024,1558,3048"/>
-<area href="classinviwo_1_1DiscardShortLines.html" alt="inviwo::DiscardShortLines" shape="rect" coords="1176,3080,1558,3104"/>
-<area href="classinviwo_1_1DrawLines.html" title="Interactive 2D line drawing." alt="inviwo::DrawLines" shape="rect" coords="1176,3136,1558,3160"/>
-<area href="classinviwo_1_1DrawPoints.html" title="Interactive 2D point drawing." alt="inviwo::DrawPoints" shape="rect" coords="1176,3192,1558,3216"/>
-<area href="classinviwo_1_1EigenMatrixToImage.html" alt="inviwo::EigenMatrixToImage" shape="rect" coords="1176,3248,1558,3272"/>
-<area href="classinviwo_1_1EigenMix.html" title="Creates a linear mix of matrix A and B such that Cij = Aij + w (Bij-Aij)" alt="inviwo::EigenMix" shape="rect" coords="1176,3304,1558,3328"/>
-<area href="classinviwo_1_1EigenNormalize.html" title="A processor to normalize an Eigen::MatrixXf A processor to normalize an Eigen::MatrixXf,..." alt="inviwo::EigenNormalize" shape="rect" coords="1176,3360,1558,3384"/>
-<area href="classinviwo_1_1EmbeddedVolumeSlice.html" alt="inviwo::EmbeddedVolumeSlice" shape="rect" coords="1176,3416,1558,3440"/>
-<area href="classinviwo_1_1EntryExitPoints.html" alt="inviwo::EntryExitPoints" shape="rect" coords="1176,3472,1558,3496"/>
-<area href="classinviwo_1_1FXAA.html" title="Anti-aliasing post process." alt="inviwo::FXAA" shape="rect" coords="1176,3528,1558,3552"/>
-<area href="classinviwo_1_1FileCache.html" alt="inviwo::FileCache&lt; DataType, InportType, OutportType &gt;" shape="rect" coords="1176,3584,1558,3608"/>
+<area href="classinviwo_1_1CacheBase.html" alt="inviwo::CacheBase" shape="rect" coords="1176,1568,1558,1592"/>
+<area href="classinviwo_1_1CalcNormalsProcessor.html" alt="inviwo::CalcNormalsProcessor" shape="rect" coords="1176,1624,1558,1648"/>
+<area href="classinviwo_1_1CameraFrustum.html" alt="inviwo::CameraFrustum" shape="rect" coords="1176,1680,1558,1704"/>
+<area href="classinviwo_1_1CameraWidget.html" title="provides a mesh-based interaction widget for the camera rotation" alt="inviwo::CameraWidget" shape="rect" coords="1176,1736,1558,1760"/>
+<area href="classinviwo_1_1CanvasProcessor.html" alt="inviwo::CanvasProcessor" shape="rect" coords="1176,1792,1558,1816"/>
+<area href="classinviwo_1_1CanvasWithPropertiesProcessor.html" alt="inviwo::CanvasWithPropertiesProcessor" shape="rect" coords="1176,1848,1558,1872"/>
+<area href="classinviwo_1_1CompositeProcessor.html" title="A processor containing a network of processors, i.e. it will act as a sub network within a processor ..." alt="inviwo::CompositeProcessor" shape="rect" coords="1176,1904,1558,1928"/>
+<area href="classinviwo_1_1CompositeSinkBase.html" alt="inviwo::CompositeSinkBase" shape="rect" coords="1176,1960,1558,1984"/>
+<area href="classinviwo_1_1CompositeSourceBase.html" alt="inviwo::CompositeSourceBase" shape="rect" coords="1176,2016,1558,2040"/>
+<area href="classinviwo_1_1ConvexHull2DProcessor.html" title="Processor computing the convex hull of a given 2D input geometry." alt="inviwo::ConvexHull2DProcessor" shape="rect" coords="1176,2072,1558,2096"/>
+<area href="classinviwo_1_1CropWidget.html" alt="inviwo::CropWidget" shape="rect" coords="1176,2128,1558,2152"/>
+<area href="classinviwo_1_1CubeProxyGeometry.html" alt="inviwo::CubeProxyGeometry" shape="rect" coords="1176,2184,1558,2208"/>
+<area href="classinviwo_1_1CubeRenderer.html" title="Renders input geometry with 3D cube glyphs using OpenGL shaders." alt="inviwo::CubeRenderer" shape="rect" coords="1176,2240,1558,2264"/>
+<area href="classinviwo_1_1DataExport.html" alt="inviwo::DataExport&lt; DataType, PortType &gt;" shape="rect" coords="1176,2296,1558,2320"/>
+<area href="classinviwo_1_1DataFrameExporter.html" alt="inviwo::DataFrameExporter" shape="rect" coords="1176,2352,1558,2376"/>
+<area href="classinviwo_1_1DataFrameFilter.html" alt="inviwo::DataFrameFilter" shape="rect" coords="1176,2408,1558,2432"/>
+<area href="classinviwo_1_1DataFrameFloat32Converter.html" alt="inviwo::DataFrameFloat32Converter" shape="rect" coords="1176,2464,1558,2488"/>
+<area href="classinviwo_1_1DataFrameJoin.html" alt="inviwo::DataFrameJoin" shape="rect" coords="1176,2520,1558,2544"/>
+<area href="classinviwo_1_1DataFrameMetaData.html" alt="inviwo::DataFrameMetaData" shape="rect" coords="1176,2576,1558,2600"/>
+<area href="classinviwo_1_1DataFrameTable.html" alt="inviwo::DataFrameTable" shape="rect" coords="1176,2632,1558,2656"/>
+<area href="classinviwo_1_1DataFrameToBuffer.html" alt="inviwo::DataFrameToBuffer" shape="rect" coords="1176,2688,1558,2712"/>
+<area href="classinviwo_1_1DataFrameToMesh.html" alt="inviwo::DataFrameToMesh" shape="rect" coords="1176,2744,1558,2768"/>
+<area href="classinviwo_1_1DataFrameToVector.html" alt="inviwo::DataFrameToVector" shape="rect" coords="1176,2800,1558,2824"/>
+<area href="classinviwo_1_1DataSource.html" alt="inviwo::DataSource&lt; DataType, PortType, ReaderType &gt;" shape="rect" coords="1176,2856,1558,2880"/>
+<area href="classinviwo_1_1DepthDarkening.html" alt="inviwo::DepthDarkening" shape="rect" coords="1176,2912,1558,2936"/>
+<area href="classinviwo_1_1DepthOfField.html" alt="inviwo::DepthOfField" shape="rect" coords="1176,2968,1558,2992"/>
+<area href="classinviwo_1_1DiffuseLightSourceProcessor.html" alt="inviwo::DiffuseLightSourceProcessor" shape="rect" coords="1176,3024,1558,3048"/>
+<area href="classinviwo_1_1DirectionalLightSourceProcessor.html" alt="inviwo::DirectionalLightSourceProcessor" shape="rect" coords="1176,3080,1558,3104"/>
+<area href="classinviwo_1_1DiscardShortLines.html" alt="inviwo::DiscardShortLines" shape="rect" coords="1176,3136,1558,3160"/>
+<area href="classinviwo_1_1DrawLines.html" title="Interactive 2D line drawing." alt="inviwo::DrawLines" shape="rect" coords="1176,3192,1558,3216"/>
+<area href="classinviwo_1_1DrawPoints.html" title="Interactive 2D point drawing." alt="inviwo::DrawPoints" shape="rect" coords="1176,3248,1558,3272"/>
+<area href="classinviwo_1_1EigenMatrixToImage.html" alt="inviwo::EigenMatrixToImage" shape="rect" coords="1176,3304,1558,3328"/>
+<area href="classinviwo_1_1EigenMix.html" title="Creates a linear mix of matrix A and B such that Cij = Aij + w (Bij-Aij)" alt="inviwo::EigenMix" shape="rect" coords="1176,3360,1558,3384"/>
+<area href="classinviwo_1_1EigenNormalize.html" title="A processor to normalize an Eigen::MatrixXf A processor to normalize an Eigen::MatrixXf,..." alt="inviwo::EigenNormalize" shape="rect" coords="1176,3416,1558,3440"/>
+<area href="classinviwo_1_1EmbeddedVolumeSlice.html" alt="inviwo::EmbeddedVolumeSlice" shape="rect" coords="1176,3472,1558,3496"/>
+<area href="classinviwo_1_1EntryExitPoints.html" alt="inviwo::EntryExitPoints" shape="rect" coords="1176,3528,1558,3552"/>
+<area href="classinviwo_1_1FXAA.html" title="Anti-aliasing post process." alt="inviwo::FXAA" shape="rect" coords="1176,3584,1558,3608"/>
 <area href="classinviwo_1_1FirstIvwProcessor.html" alt="inviwo::FirstIvwProcessor" shape="rect" coords="1176,3640,1558,3664"/>
 <area href="classinviwo_1_1Fog.html" title="Fog post process. (Computed using depth-layer and applied to color-layer)" alt="inviwo::Fog" shape="rect" coords="1176,3696,1558,3720"/>
 <area href="classinviwo_1_1GLUITestProcessor.html" title="provides a simple user interface based on GLUI" alt="inviwo::GLUITestProcessor" shape="rect" coords="1176,3752,1558,3776"/>
