Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -1044,6 +1044,8 @@
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlags.__eq__">(inviwopy.properties.ListPropertyUIFlags method)</a>
 </li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.__eq__">(inviwopy.properties.PropertySerializationMode method)</a>
+</li>
         <li><a href="_generated/inviwopy.html#inviwopy.ProtectedModule.__eq__">(inviwopy.ProtectedModule method)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.Tags.__eq__">(inviwopy.Tags method)</a>
@@ -1680,6 +1682,8 @@
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlag.__hash__">(inviwopy.properties.ListPropertyUIFlag method)</a>
 </li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.__hash__">(inviwopy.properties.PropertySerializationMode method)</a>
+</li>
         <li><a href="_generated/inviwopy.html#inviwopy.ProtectedModule.__hash__">(inviwopy.ProtectedModule method)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.TouchDeviceType.__hash__">(inviwopy.TouchDeviceType method)</a>
@@ -2001,6 +2005,8 @@
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.InvalidationLevel.__index__">(inviwopy.properties.InvalidationLevel method)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlag.__index__">(inviwopy.properties.ListPropertyUIFlag method)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.__index__">(inviwopy.properties.PropertySerializationMode method)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.ProtectedModule.__index__">(inviwopy.ProtectedModule method)</a>
 </li>
@@ -3382,6 +3388,8 @@
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySemantics.__init__">(inviwopy.properties.PropertySemantics method)</a>
 </li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.__init__">(inviwopy.properties.PropertySerializationMode method)</a>
+</li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyVecWrapper.__init__">(inviwopy.properties.PropertyVecWrapper method)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyWidget.__init__">(inviwopy.properties.PropertyWidget method)</a>
@@ -3795,6 +3803,8 @@
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.InvalidationLevel.__int__">(inviwopy.properties.InvalidationLevel method)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlag.__int__">(inviwopy.properties.ListPropertyUIFlag method)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.__int__">(inviwopy.properties.PropertySerializationMode method)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.ProtectedModule.__int__">(inviwopy.ProtectedModule method)</a>
 </li>
@@ -4809,6 +4819,8 @@
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlag.__ne__">(inviwopy.properties.ListPropertyUIFlag method)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlags.__ne__">(inviwopy.properties.ListPropertyUIFlags method)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.__ne__">(inviwopy.properties.PropertySerializationMode method)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.ProtectedModule.__ne__">(inviwopy.ProtectedModule method)</a>
 </li>
@@ -6064,6 +6076,8 @@
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySemantics.__repr__">(inviwopy.properties.PropertySemantics method)</a>
 </li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.__repr__">(inviwopy.properties.PropertySerializationMode method)</a>
+</li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyVecWrapper.__repr__">(inviwopy.properties.PropertyVecWrapper method)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Size_tMinMaxProperty.__repr__">(inviwopy.properties.Size_tMinMaxProperty method)</a>
@@ -6532,6 +6546,8 @@
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlags.__str__">(inviwopy.properties.ListPropertyUIFlags method)</a>
 </li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.__str__">(inviwopy.properties.PropertySerializationMode method)</a>
+</li>
         <li><a href="_generated/inviwopy.html#inviwopy.ProtectedModule.__str__">(inviwopy.ProtectedModule method)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.TouchDeviceType.__str__">(inviwopy.TouchDeviceType method)</a>
@@ -6978,6 +6994,8 @@
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.ConnectivityType.Adjacency">Adjacency (inviwopy.data.ConnectivityType attribute)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.InviwoModuleFactoryObject.aliases">aliases (inviwopy.InviwoModuleFactoryObject property)</a>
+</li>
+      <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.All">All (inviwopy.properties.PropertySerializationMode attribute)</a>
 </li>
       <li><a href="_generated/inviwopy.glm.html#inviwopy.glm.all">all() (in module inviwopy.glm)</a>
 
@@ -8560,7 +8578,11 @@
       <li><a href="_generated/inviwopy.html#inviwopy.debugBreak">debugBreak() (in module inviwopy)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySemantics.Default">Default (inviwopy.properties.PropertySemantics attribute)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.Default">(inviwopy.properties.PropertySerializationMode attribute)</a>
 </li>
+      </ul></li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh.defaultMeshInfo">defaultMeshInfo (inviwopy.data.Mesh property)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.IvwKey.Delete">Delete (inviwopy.IvwKey attribute)</a>
@@ -12635,6 +12657,8 @@
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlag.name">(inviwopy.properties.ListPropertyUIFlag property)</a>
 </li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.name">(inviwopy.properties.PropertySerializationMode property)</a>
+</li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.StringOption.name">(inviwopy.properties.StringOption property)</a>
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.ProtectedModule.name">(inviwopy.ProtectedModule property)</a>
@@ -12703,7 +12727,11 @@
       <li><a href="_generated/inviwopy.html#inviwopy.PickingState.NoState">NoState (inviwopy.PickingState attribute)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.LogVerbosity.Nothing">Nothing (inviwopy.LogVerbosity attribute)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.Nothing">(inviwopy.properties.PropertySerializationMode attribute)</a>
 </li>
+      </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.TouchState.NoTouch">NoTouch (inviwopy.TouchState attribute)</a>
 </li>
       <li><a href="_generated/inviwopy.data.formats.html#inviwopy.data.formats.DataFormatId.NotSpecialized">NotSpecialized (inviwopy.data.formats.DataFormatId attribute)</a>
@@ -13378,6 +13406,8 @@
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySemantics">PropertySemantics (class in inviwopy.properties)</a>
 </li>
+      <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode">PropertySerializationMode (class in inviwopy.properties)</a>
+</li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyVecWrapper">PropertyVecWrapper (class in inviwopy.properties)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyWidget">PropertyWidget (class in inviwopy.properties)</a>
@@ -13947,6 +13977,8 @@
       <li><a href="_generated/inviwopy.html#inviwopy.Version.semanticVersionEqual">semanticVersionEqual() (inviwopy.Version method)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.IvwKey.Semicolon">Semicolon (inviwopy.IvwKey attribute)</a>
+</li>
+      <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Property.serializationMode">serializationMode (inviwopy.properties.Property property)</a>
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BitSet.set">set() (inviwopy.data.BitSet method)</a>
 
@@ -14932,6 +14964,8 @@
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.OptionPropertyInt.value">(inviwopy.properties.OptionPropertyInt property)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.OptionPropertyString.value">(inviwopy.properties.OptionPropertyString property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertySerializationMode.value">(inviwopy.properties.PropertySerializationMode property)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Size_tMinMaxProperty.value">(inviwopy.properties.Size_tMinMaxProperty property)</a>
 </li>
