Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -11323,6 +11323,8 @@
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BitSet.intersect">intersect() (inviwopy.data.BitSet method)</a>
 </li>
+      <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferType.IntMetaAttrib">IntMetaAttrib (inviwopy.data.BufferType attribute)</a>
+</li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.IntMinMaxProperty">IntMinMaxProperty (class in inviwopy.properties)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.IntOption">IntOption (class in inviwopy.properties)</a>
