Update C++ API Docs

--- a/cpp-api/namespaceinviwo.html
+++ b/cpp-api/namespaceinviwo.html
@@ -4102,6 +4102,7 @@ Enumerations</h2></td></tr>
 , <b>PickingAttrib</b>
 , <br />
 &#160;&#160;<b>ScalarMetaAttrib</b>
+, <b>IntMetaAttrib</b>
 , <b>Unknown</b>
 <br />
  }</td></tr>
