--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 <h2>2025-05-05 CameraWidget</h2>
-<p>The CameraWidget gained new functionallity to animate the camera either in a continious fashion or by swinging back and forth.<br>
+<p>The CameraWidget gained new functionality to animate the camera either in a continuous fashion or by swinging back and forth.<br>
 <a target="_blank" rel="noopener noreferrer" href="resources/changelog/camera-cube.jpg"><img src="resources/changelog/camera-cube.jpg" alt="Camera Cube" style="max-width: 100%;"></a><br>
 It also got a new "Cube" interaction widget to easily set various view directions.</p>
 <h2>2025-05-05 Easing</h2>
