--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -42,7 +42,7 @@ See <code class="notranslate">RandomMeshGenerator::invokeEvent()</code> and <cod
 It also got a new "Cube" interaction widget to easily set various view directions.</p>
 <h2>2025-05-05 Easing</h2>
 <p>The easing header in the <code class="notranslate">Animation</code> module has been refactored and moved into <code class="notranslate">inviwo/core/algorithm/easing.h</code><br>
-The <code class="notranslate">easing</code> namespace has been remvoed. The <code class="notranslate">EasingType</code> has been split into a <code class="notranslate">EasingType</code> and a <code class="notranslate">EasingMode</code> which are combined in a <code class="notranslate">Easing</code> struct.<br>
+The <code class="notranslate">easing</code> namespace has been removed. The <code class="notranslate">EasingType</code> has been split into a <code class="notranslate">EasingType</code> and a <code class="notranslate">EasingMode</code> which are combined in a <code class="notranslate">Easing</code> struct.<br>
 The function <code class="notranslate">easing::ease</code> is replaced with a <code class="notranslate">util::ease</code> function.</p>
 <h2>2025-03-25 Updated Inviwo Volume File Formats (.ivf and .ivfs)</h2>
 <p>The Inviwo Volume File format (.ivf) was revised and updated. It now also supports reading compressed binary/raw data using either ZLib, libBZ2, libLZMA, or libZstd (.gz, .bz2, .xz, and .zst). When exporting volume data to .ivf the data is compressed with ZLib.</p>
